--- a/002.fluctuations/fluctuations.ipynb
+++ b/002.fluctuations/fluctuations.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11e6fd9a",
+   "id": "14433a9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,8 +23,8 @@
     "\n",
     "\n",
     "class Config:\n",
-    "    T = 1000  # time (1000)\n",
-    "    N = 1000  # number of firms\n",
+    "    T = 2000  # time (1000)\n",
+    "    N = 3000  # number of firms\n",
     "    Ñ = 1     # size parameter\n",
     "\n",
     "    φ = 0.1  # capital productivity (constant and uniform)\n",
@@ -43,6 +43,8 @@
     "    π_i0 = 0  # profit\n",
     "    B_i0 = 0  # bad debt\n",
     "\n",
+    "    A_threshold_i0 = 2\n",
+    "\n",
     "    A_multiplier = 0.001\n",
     "    # risk coefficient for bank sector (Basel)\n",
     "    v = 0.2\n",
@@ -55,13 +57,13 @@
     "    newFirmsInitialValues = False\n",
     "\n",
     "    # If True, the equilibrium rate is used (a fix value) instead of formula for interest in the paper\n",
-    "    rateEquilibrium = True"
+    "    rateEquilibrium = False"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77503b7d",
+   "id": "ca3c912e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,6 +123,7 @@
     "    rate = []\n",
     "    bankL = []\n",
     "    bankπ = []\n",
+    "    A_threshold = []\n",
     "\n",
     "    max_A = 0\n",
     "\n",
@@ -152,6 +155,7 @@
     "        Statistics.bankπ.append(BankSector.π)\n",
     "        Statistics.bankL.append(BankSector.L)\n",
     "        Statistics.bankB.append(BankSector.B)\n",
+    "        Statistics.A_threshold.append(Status.A_threshold)\n",
     "        Statistics.firmsNum.append(len(Status.firms))\n",
     "        Statistics.rate.append(BankSector.getAverageRate())\n",
     "\n",
@@ -185,6 +189,9 @@
     "    firmsGrowRate = []\n",
     "\n",
     "    firmIdMax = 0\n",
+    "\n",
+    "\n",
+    "    A_threshold = Config.A_threshold_i0\n",
     "\n",
     "    @staticmethod\n",
     "    def getNewFirmId():\n",
@@ -221,7 +228,7 @@
     "            # Beta = (1/v)-1\n",
     "            return Config.φ / Config.g - 2 * Config.ω * (1 / Config.v - 1) * Config.φ * Config.φ / (Config.g * Config.g)\n",
     "        else:\n",
-    "            # (equation 12)\n",
+    "            # (equation 12) #TODO -> aqui falla al obtener la grafica\n",
     "            return (2 + self.A) / (2 * Config.c * Config.g * (1 / (Config.c * Config.φ) + self.π + self.A) +\n",
     "                                   2 * Config.c * Config.g * BankSector.L * (\n",
     "                                           Config.λ * self.__ratioK() + (1 - Config.λ) * self.__ratioA()))\n",
@@ -278,6 +285,7 @@
     "            average += firm.r\n",
     "        return average / len(Status.firms)\n",
     "\n",
+    "\n",
     "    @staticmethod\n",
     "    def determineEquity():\n",
     "        # equation 14\n",
@@ -286,16 +294,20 @@
     "        return result\n",
     "\n",
     "\n",
+    "def threshold_estimate(value):\n",
+    "    return value * (1 + Config.ω * (1 / Config.v - 1) * Config.φ / Config.g * (1 + Config.A_multiplier))\n",
     "def removeBankruptedFirms():\n",
     "    removed_firms = 0\n",
     "    BankSector.B = 0.0\n",
+    "\n",
+    "    Status.A_threshold = threshold_estimate(Status.A_threshold)\n",
     "    for firm in Status.firms[:]:\n",
-    "        A_threshold_to_exit = firm.A_prev * (1 + Config.ω * (1 / Config.v - 1) * Config.φ / Config.g * (1 + Config.A_multiplier))\n",
-    "        #Statistics.log(f'firm #{firm.id}: A(1+w...)={A_threshold_to_exit}  A=' +\n",
-    "        #               f'{firm.A}  {\"***\" if firm.A < A_threshold_to_exit else \"---\"}')\n",
+    "        firm.A = threshold_estimate(firm.A)\n",
+    "        A_threshold = firm.A_prev * (1 + Config.ω * (1 / Config.v - 1) * Config.φ / Config.g * (1 + Config.A_multiplier))\n",
     "        #if (firm.π + firm.A) < 0:\n",
-    "        if Status.t >= 5 and firm.A <= A_threshold_to_exit:\n",
+    "        if Status.t >= 5 and firm.A <= Status.A_threshold:\n",
     "            # bankrupt: we sum Bn-1\n",
+    "            Statistics.log(f'firm #{firm.id} failed: A(1+w...)<=A_threshold(1+w...): {firm.A}={Status.A_threshold}')\n",
     "            if firm.L - firm.K < 0:\n",
     "                BankSector.B += (firm.K - firm.L)\n",
     "            Status.firms.remove(firm)\n",
@@ -310,20 +322,21 @@
     "\n",
     "def addFirms(Nentry):\n",
     "    #newFirmL = statistics.mode(list(map(lambda x: x.L, Status.firms)))\n",
-    "    newFirmA_prev = statistics.mode(list(map(lambda x: x.A_prev, Status.firms)))\n",
-    "    exit_condition = newFirmA_prev * (1 + Config.ω * (1 / Config.v - 1) * Config.φ / Config.g * (1 + Config.A_multiplier))\n",
+    "    #newFirmA_prev = statistics.mode(list(map(lambda x: x.A_prev, Status.firms)))\n",
+    "    #exit_condition = newFirmA_prev * (1 + Config.ω * (1 / Config.v - 1) * Config.φ / Config.g * (1 + Config.A_multiplier))\n",
     "\n",
-    "    newFirmK = newFirmA_prev / 0.2 # statistics.mode(list(map(lambda x: x.K, Status.firms)))\n",
-    "    newFirmL = newFirmK - exit_condition\n",
+    "    newFirmA = Status.A_threshold\n",
+    "    newFirmK = newFirmA / 0.2 # statistics.mode(list(map(lambda x: x.K, Status.firms)))\n",
+    "    newFirmL = newFirmK - newFirmA\n",
     "    for i in range(Nentry):\n",
     "        newFirm = Firm()\n",
     "        if not Config.newFirmsInitialValues:\n",
     "            newFirm.L = newFirmL\n",
-    "            newFirm.A = exit_condition\n",
+    "            newFirm.A = newFirmA\n",
     "            newFirm.K = newFirmK\n",
     "        Status.firms.append(newFirm)\n",
     "    Statistics.firmsNEntry.append(Nentry)\n",
-    "    Statistics.log(f\"        - add %d new firms (Nentry) with L={newFirmL},A={newFirmA_prev},K={newFirmK}\" % Nentry)\n",
+    "    Statistics.log(f\"        - add %d new firms (Nentry) with L={newFirmL},A={newFirmA},K={newFirmK}\" % Nentry)\n",
     "\n",
     "\n",
     "def updateFirmsStatus():\n",
@@ -379,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6410dac3",
+   "id": "0b8f57f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,10 +505,12 @@
     "            yy.append(i)\n",
     "            xx1.append(math.log(Status.firmsKsums[i]))\n",
     "            xx2.append(math.log(Status.firmsAsums[i]))\n",
-    "            xx3.append(math.log(Status.firmsLsums[i])-1) #TODO quitar el -1\n",
+    "            xx3.append(math.log(Status.firmsLsums[i]))\n",
+    "            xx4.append(math.log(threshold_estimate(i)))\n",
     "        plt.plot(yy, xx1, 'b-', label='logK')\n",
     "        plt.plot(yy, xx2, 'r-', label='logA')\n",
-    "        plt.plot(yy, xx3, 'g-', label='(logL)-1')\n",
+    "        plt.plot(yy, xx3, 'g-', label='logL')\n",
+    "        plt.plot(yy, xx4, 'p-', label='A_threshold')\n",
     "        plt.xlabel(\"t\")\n",
     "        plt.title(\"Logarithm of aggregate output\")\n",
     "        plt.legend(loc=0)\n",
@@ -811,6 +826,7 @@
     "        results.write(f\"{'bestA_r':>15}\")\n",
     "        results.write(f\"{'others_r':>15}\")\n",
     "        results.write(f\"{'bestA_percen':>15}\")\n",
+    "        results.write(f\"{'A_threshold':>15}\")\n",
     "        results.write(f\"\\n\")\n",
     "        for i in range(Config.T):\n",
     "            line = f\"{i:>3}\"\n",
@@ -830,6 +846,7 @@
     "            line += f\"{Statistics.best_networth_rate[i]:15.2f}\"\n",
     "            line += f\"{Statistics.rate_without_best_networth[i]:15.2f}\"\n",
     "            line += f\"{Statistics.best_networth_A_percentage[i]:15.2f}\"\n",
+    "            line += f\"{Statistics.A_threshold[i]:15.2f}\"\n",
     "            results.write(f\"{line}\\n\")\n",
     "            if progress_bar:\n",
     "                progress_bar.next()\n",
@@ -840,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c295dc9",
+   "id": "0af8b8f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +918,6 @@
     "    if args.save:\n",
     "        save_results(filename=args.save, interactive=True)\n",
     "\n",
-    "\n",
     "def is_notebook():\n",
     "    try:\n",
     "        __IPYTHON__\n",
@@ -913,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58f61bde",
+   "id": "b08c91ea",
    "metadata": {},
    "outputs": [],
    "source": [
