before putting gabrielle changes

--- a/002.fluctuations/fluctuations.ipynb
+++ b/002.fluctuations/fluctuations.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14433a9e",
+   "id": "d93c4f6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca3c912e",
+   "id": "5dc96833",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b8f57f1",
+   "id": "7a6c6fd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
     "class Plots:\n",
     "\n",
     "    @staticmethod\n",
-    "    def plot_zipf_density(show=True):\n",
+    "    def disabled_plot_zipf_density(show=True):\n",
     "        Statistics.log(\"zipf_density\")\n",
     "        plt.clf()\n",
     "        zipf = {}  # log K = freq\n",
@@ -450,7 +450,7 @@
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/zipf_density.svg\")\n",
     "\n",
     "    @staticmethod\n",
-    "    def plot_zipf_density1(show=True):\n",
+    "    def disabled_plot_zipf_density1(show=True):\n",
     "        Statistics.log(\"zipf_density\")\n",
     "        plt.clf()\n",
     "        zipf = {}  # log K = freq\n",
@@ -493,7 +493,7 @@
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/zipf_rank.svg\")\n",
     "\n",
     "    @staticmethod\n",
-    "    def plot_aggregate_output(show=True):\n",
+    "    def plot_aggregate_output(show=True): #TODO\n",
     "        Statistics.log(\"aggregate_output\")\n",
     "        plt.clf()\n",
     "        xx1 = []\n",
@@ -501,12 +501,12 @@
     "        xx3 = []\n",
     "        xx4 = []\n",
     "        yy = []\n",
-    "        for i in range(150, Config.T):\n",
+    "        for i in range(1,Config.T):\n",
     "            yy.append(i)\n",
     "            xx1.append(math.log(Status.firmsKsums[i]))\n",
     "            xx2.append(math.log(Status.firmsAsums[i]))\n",
     "            xx3.append(math.log(Status.firmsLsums[i]))\n",
-    "            xx4.append(math.log(threshold_estimate(i)))\n",
+    "            xx4.append(i*math.log(threshold_estimate(1)))\n",
     "        plt.plot(yy, xx1, 'b-', label='logK')\n",
     "        plt.plot(yy, xx2, 'r-', label='logA')\n",
     "        plt.plot(yy, xx3, 'g-', label='logL')\n",
@@ -526,7 +526,7 @@
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/equity_scatter.pdf\")\n",
     "\n",
     "    @staticmethod\n",
-    "    def plot_histogram_equity(show=True):\n",
+    "    def disabled_plot_histogram_equity(show=True):\n",
     "        plt.clf()\n",
     "        plt.hist(Statistics.matrix_Ar_A, bins=20, log=True)\n",
     "        plt.title('FirmsA distribution')\n",
@@ -734,7 +734,7 @@
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/growth_rates.svg\")\n",
     "\n",
     "    @staticmethod\n",
-    "    def plot_distribution_kl(show):\n",
+    "    def disabled_plot_distribution_kl(show):\n",
     "        plt.clf()\n",
     "        fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(10, 4))\n",
     "\n",
@@ -857,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0af8b8f8",
+   "id": "e97e9ce8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b08c91ea",
+   "id": "34913081",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,12 +938,29 @@
     "    if not os.path.isdir(OUTPUT_DIRECTORY):\n",
     "        os.mkdir(OUTPUT_DIRECTORY)\n",
     "    if is_notebook():\n",
+    "        OUTPUT_DIRECTORY = \"/content\"\n",
     "        global dataframe\n",
     "        doSimulation()\n",
     "        Plots.run()\n",
+    "        # If you want to manipulate the data\n",
     "        dataframe = generate_dataframe_from_statistics()\n",
     "    else:\n",
     "        doInteractive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf67173a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# In Collab you can do now this:\n",
+    "# Config.N = 150\n",
+    "# doSimulation()\n",
+    "# Plots.run()\n",
+    "# save_results(filename='my_execution')"
    ]
   }
  ],
