tras cambios gabrielle

--- a/002.fluctuations/fluctuations.ipynb
+++ b/002.fluctuations/fluctuations.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d93c4f6f",
+   "id": "8c86717b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +23,9 @@
     "\n",
     "\n",
     "class Config:\n",
-    "    T = 2000  # time (1000)\n",
-    "    N = 3000  # number of firms\n",
-    "    Ñ = 1     # size parameter\n",
+    "    T = 1000  # time (1000)\n",
+    "    N = 500  # number of firms\n",
+    "    Ñ = 1  # size parameter\n",
     "\n",
     "    φ = 0.1  # capital productivity (constant and uniform)\n",
     "    c = 1  # parameter bankruptcy cost equation\n",
@@ -43,9 +43,9 @@
     "    π_i0 = 0  # profit\n",
     "    B_i0 = 0  # bad debt\n",
     "\n",
-    "    A_threshold_i0 = 2\n",
+    "    A_threshold_i0 = 5\n",
     "\n",
-    "    A_multiplier = 0.001\n",
+    "    A_multiplier = 0.01\n",
     "    # risk coefficient for bank sector (Basel)\n",
     "    v = 0.2\n",
     "\n",
@@ -57,13 +57,13 @@
     "    newFirmsInitialValues = False\n",
     "\n",
     "    # If True, the equilibrium rate is used (a fix value) instead of formula for interest in the paper\n",
-    "    rateEquilibrium = False"
+    "    rateEquilibrium = True"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dc96833",
+   "id": "bd10c04e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
     "            r_without_best_networth_firm += firms[i].r\n",
     "\n",
     "        r_without_best_networth_firm -= firm_with_best_networth_r\n",
-    "        r_without_best_networth_firm /= (len(firms)-1)   # is the average\n",
+    "        r_without_best_networth_firm /= (len(firms) - 1)  # is the average\n",
     "        return (firm_with_best_networth, firm_with_worst_networth, A_max, firm_with_best_networth_r,\n",
     "                r_without_best_networth_firm)\n",
     "\n",
@@ -124,8 +124,7 @@
     "    bankL = []\n",
     "    bankπ = []\n",
     "    A_threshold = []\n",
-    "\n",
-    "    max_A = 0\n",
+    "    newFirmA_all_periods = []\n",
     "\n",
     "    matrix_Ar_A = []\n",
     "    matrix_Ar_r = []\n",
@@ -136,6 +135,12 @@
     "    worst_networth_firm = []\n",
     "    rate_without_best_networth = []\n",
     "    num_igual_r = []\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def init():\n",
+    "        for element in dir(Statistics):\n",
+    "            if isinstance(getattr(Statistics, element),list):\n",
+    "                setattr(Statistics, element, [])\n",
     "\n",
     "    @staticmethod\n",
     "    def getStatistics():\n",
@@ -161,7 +166,7 @@
     "\n",
     "        (best_networth_firm_id, worst_networth_firm_id,\n",
     "         best_networth_firm_A, best_networth_firm_r,\n",
-    "         r_without_best_networth_firm ) = Statistics.determine_best_and_worst_networth_firm(Status.firms)\n",
+    "         r_without_best_networth_firm) = Statistics.determine_best_and_worst_networth_firm(Status.firms)\n",
     "        Statistics.best_networth_firm.append(best_networth_firm_id)\n",
     "        Statistics.worst_networth_firm.append(worst_networth_firm_id)\n",
     "        Statistics.worst_networth.append(best_networth_firm_A)\n",
@@ -190,7 +195,6 @@
     "\n",
     "    firmIdMax = 0\n",
     "\n",
-    "\n",
     "    A_threshold = Config.A_threshold_i0\n",
     "\n",
     "    @staticmethod\n",
@@ -207,7 +211,7 @@
     "class Firm:\n",
     "    K = Config.K_i0  # capital\n",
     "    A = Config.A_i0  # asset\n",
-    "    A_prev = Config.A_i0    # previous value of A in each iteration\n",
+    "    A_prev = Config.A_i0  # previous value of A in each iteration\n",
     "    r = 0.0  # rate money is given by banksector\n",
     "    L = Config.L_i0  # credit\n",
     "    π = 0.0  # profit\n",
@@ -220,7 +224,6 @@
     "        # (equation 11)\n",
     "        result = Config.λ * BankSector.L * self.K / Status.firmsKsum + (\n",
     "                1 - Config.λ) * BankSector.L * self.A / Status.firmsAsum\n",
-    "        ## Statistics.log( \"a*%s*%s/%s+(1-a)*%s*%s/%s  L=%s\" % (BankSector.L,self.K,Status.firmsKsum,BankSector.L,self.A,Status.firmsAsum,result))\n",
     "        return result\n",
     "\n",
     "    def determineInterestRate(self):\n",
@@ -228,7 +231,7 @@
     "            # Beta = (1/v)-1\n",
     "            return Config.φ / Config.g - 2 * Config.ω * (1 / Config.v - 1) * Config.φ * Config.φ / (Config.g * Config.g)\n",
     "        else:\n",
-    "            # (equation 12) #TODO -> aqui falla al obtener la grafica\n",
+    "            # (equation 12)\n",
     "            return (2 + self.A) / (2 * Config.c * Config.g * (1 / (Config.c * Config.φ) + self.π + self.A) +\n",
     "                                   2 * Config.c * Config.g * BankSector.L * (\n",
     "                                           Config.λ * self.__ratioK() + (1 - Config.λ) * self.__ratioA()))\n",
@@ -285,7 +288,6 @@
     "            average += firm.r\n",
     "        return average / len(Status.firms)\n",
     "\n",
-    "\n",
     "    @staticmethod\n",
     "    def determineEquity():\n",
     "        # equation 14\n",
@@ -296,14 +298,14 @@
     "\n",
     "def threshold_estimate(value):\n",
     "    return value * (1 + Config.ω * (1 / Config.v - 1) * Config.φ / Config.g * (1 + Config.A_multiplier))\n",
+    "\n",
+    "\n",
     "def removeBankruptedFirms():\n",
     "    removed_firms = 0\n",
     "    BankSector.B = 0.0\n",
     "\n",
     "    Status.A_threshold = threshold_estimate(Status.A_threshold)\n",
     "    for firm in Status.firms[:]:\n",
-    "        firm.A = threshold_estimate(firm.A)\n",
-    "        A_threshold = firm.A_prev * (1 + Config.ω * (1 / Config.v - 1) * Config.φ / Config.g * (1 + Config.A_multiplier))\n",
     "        #if (firm.π + firm.A) < 0:\n",
     "        if Status.t >= 5 and firm.A <= Status.A_threshold:\n",
     "            # bankrupt: we sum Bn-1\n",
@@ -325,8 +327,8 @@
     "    #newFirmA_prev = statistics.mode(list(map(lambda x: x.A_prev, Status.firms)))\n",
     "    #exit_condition = newFirmA_prev * (1 + Config.ω * (1 / Config.v - 1) * Config.φ / Config.g * (1 + Config.A_multiplier))\n",
     "\n",
-    "    newFirmA = Status.A_threshold\n",
-    "    newFirmK = newFirmA / 0.2 # statistics.mode(list(map(lambda x: x.K, Status.firms)))\n",
+    "    newFirmA = Status.A_threshold * (1 + random.uniform(0, 2))\n",
+    "    newFirmK = newFirmA / 0.2  # statistics.mode(list(map(lambda x: x.K, Status.firms)))\n",
     "    newFirmL = newFirmK - newFirmA\n",
     "    for i in range(Nentry):\n",
     "        newFirm = Firm()\n",
@@ -336,6 +338,7 @@
     "            newFirm.K = newFirmK\n",
     "        Status.firms.append(newFirm)\n",
     "    Statistics.firmsNEntry.append(Nentry)\n",
+    "    Statistics.newFirmA_all_periods.append(newFirmA)\n",
     "    Statistics.log(f\"        - add %d new firms (Nentry) with L={newFirmL},A={newFirmA},K={newFirmK}\" % Nentry)\n",
     "\n",
     "\n",
@@ -367,6 +370,7 @@
     "        firm.π = firm.determineProfit()\n",
     "        firm.A_prev = firm.A\n",
     "        firm.A = firm.determineAssets()\n",
+    "        # firm.K = firm.L + firm.A\n",
     "        Status.firmsπsum += firm.π\n",
     "    # update Kt-1 and At-1 (Status.firmsKsum && Status.firmsAsum):\n",
     "    updateFirmsStatus()\n",
@@ -392,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a6c6fd0",
+   "id": "360f47ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +497,7 @@
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/zipf_rank.svg\")\n",
     "\n",
     "    @staticmethod\n",
-    "    def plot_aggregate_output(show=True): #TODO\n",
+    "    def plot_aggregate_output(show=True):\n",
     "        Statistics.log(\"aggregate_output\")\n",
     "        plt.clf()\n",
     "        xx1 = []\n",
@@ -501,12 +505,12 @@
     "        xx3 = []\n",
     "        xx4 = []\n",
     "        yy = []\n",
-    "        for i in range(1,Config.T):\n",
+    "        for i in range(1, Config.T):\n",
     "            yy.append(i)\n",
     "            xx1.append(math.log(Status.firmsKsums[i]))\n",
     "            xx2.append(math.log(Status.firmsAsums[i]))\n",
     "            xx3.append(math.log(Status.firmsLsums[i]))\n",
-    "            xx4.append(i*math.log(threshold_estimate(1)))\n",
+    "            xx4.append(i * math.log(threshold_estimate(1)))\n",
     "        plt.plot(yy, xx1, 'b-', label='logK')\n",
     "        plt.plot(yy, xx2, 'r-', label='logA')\n",
     "        plt.plot(yy, xx3, 'g-', label='logL')\n",
@@ -703,6 +707,38 @@
     "        plt.title(\"Bad debt\")\n",
     "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/bad_debt.svg\")\n",
     "\n",
+    "    @staticmethod\n",
+    "    def plot_threshold(show=True):\n",
+    "        Statistics.log(\"A_threshold\")\n",
+    "        plt.clf()\n",
+    "        xx = []\n",
+    "        yy = []\n",
+    "        for i in range(150, Config.T):\n",
+    "            if Statistics.A_threshold[i] > 0:\n",
+    "                xx.append(i)\n",
+    "                yy.append(Statistics.A_threshold[i])\n",
+    "        plt.plot(xx, yy, 'b-')\n",
+    "        plt.ylabel(\"A_threshold\")\n",
+    "        plt.xlabel(\"t\")\n",
+    "        plt.title(\"A_threshold\")\n",
+    "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/A_threshold.svg\")\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def plot_A_newfirm(show=True):\n",
+    "        Statistics.log(\"newFirmA\")\n",
+    "        plt.clf()\n",
+    "        xx = []\n",
+    "        yy = []\n",
+    "        for i in range(150, len(Statistics.newFirmA_all_periods)):\n",
+    "            xx.append(i)\n",
+    "            yy.append(Statistics.newFirmA_all_periods[i])\n",
+    "        plt.plot(xx, yy, 'b-')\n",
+    "        plt.ylabel(\"newFirmA\")\n",
+    "        plt.xlabel(\"t\")\n",
+    "        plt.title(\"newFirmA\")\n",
+    "        plt.show() if show else plt.savefig(OUTPUT_DIRECTORY + \"/newFirmA.svg\")\n",
+    "\n",
+    "    @staticmethod\n",
     "    def plot_interest_rate(show):\n",
     "        Statistics.log(\"interest_rate\")\n",
     "        plt.clf()\n",
@@ -857,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e97e9ce8",
+   "id": "44e295fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,6 +954,7 @@
     "    if args.save:\n",
     "        save_results(filename=args.save, interactive=True)\n",
     "\n",
+    "\n",
     "def is_notebook():\n",
     "    try:\n",
     "        __IPYTHON__\n",
@@ -929,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34913081",
+   "id": "afac84fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,13 +988,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf67173a",
+   "id": "8ce9934c",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# In Collab you can do now this:\n",
     "# Config.N = 150\n",
+    "# Statistics.init()\n",
     "# doSimulation()\n",
     "# Plots.run()\n",
     "# save_results(filename='my_execution')"
